# ai-orchestration-ex5

./: .env-example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  testing-airllm.py
.github/workflows/: ci.yml
assets/report_llamacpp/: metrics.csv
assets/run_20260706_135457/: metrics.csv
config/: experiment.json  hardware.json  rate_limits.json
config/smoke/: experiment.json  hardware.json
docs/: AI_USAGE_AND_COST.md  BENCHMARK.md  CONFIG.md  IMPLEMENTATION.md  INCONSISTENCIES.md  INTERFACES.md  LESSON_INTERFACE_FIRST.md  PLAN.md  PRD.md  PROMPT_LOG.md  SECURITY_CHECKS.md  TODO.md
notebooks/: analysis.ipynb
pocs/: __init__.py  cli_run_all_poc.py  metrics_library_poc.py  metrics_peak_poc.py  metrics_record_poc.py  metrics_sampling_poc.py  metrics_timing_poc.py  psutil_feature_pocs.py  psutil_library_poc.py  result_writer_feature_poc.py  result_writer_library_poc.py  result_writer_real_data_poc.py  sdk_module_poc.py  torch_feature_pocs.py  torch_library_poc.py  transformers_feature_pocs.py  transformers_library_poc.py  visualization_pipeline_poc.py
results/: metrics_20260706_135457.json  metrics_llamacpp.json  metrics_medium.json  metrics_phase8.json  metrics_sweep.json
scripts/: README.md  aggregate_ai_usage.py  check-secrets.py  check_docs_present.py  check_markdown_links.py  check_no_secrets.py  check_source_archives.py  readme_sync.py  run_llamacpp_benchmark.py  run_medium_benchmark.py  run_param_sweep.py  validate_repo.py
send-to-evya/rtx-4080-pc/: experiment.json  hardware.json
src/: main.py
(+141 files in other folders)
