[project]
name = "airllm-benchmark"
version = "1.0.0"
description = "AirLLM Inference Benchmark — Compare GPU, CPU baseline, and AirLLM paged inference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "airllm>=0.1.0",
    "bitsandbytes>=0.40.0",
    "llama-cpp-python>=0.3.0",
    "ollama>=0.1.0",
    "psutil>=5.9.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "ruff>=0.15.20",
    "torch==2.6.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
lint = [
    "ruff>=0.1.0",
]
dev = [
    "pyyaml>=6.0",
    "pre-commit>=3.5",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["airllm_benchmark"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
